package org.example.TEMA6.Practica2;

/**
 * Enum de las categorías disponibles
 */
public enum Equipos {

    BENJAMIN, ALEVIN, INFANTIL, CADETE, JUVENIL, SENIOR;

}
